# IQA_re

./: README.md  THIRD_PARTY.md
backbones/2DMamba/: .gitignore  README.md  SOURCE_URL.txt
backbones/2DMamba/2DMambaMIL/: README.md  draw_heatmap.py  main.py
backbones/2DMamba/2DMambaMIL/dataset/: csv_file  dataset_generic.py  dataset_survival.py
backbones/2DMamba/2DMambaMIL/mamba_ssm/: __init__.py
backbones/2DMamba/2DMambaMIL/models/: ABMIL.py  CLAM.py  DFDT.py  DSMIL.py  MambaMIL.py  MambaMIL_2D.py  S4MIL.py  TransMIL.py  mamba_simple.py  pscan_2d.py
backbones/2DMamba/2DMambaMIL/utils/: core_utils.py  survival_utils.py  utils.py
backbones/2DMamba/2DVMamba/classification/: config.py  debug_model.py  main.py
backbones/2DMamba/cuda_kernel/: CMakeLists.txt  build.sh
backbones/2DMamba/cuda_kernel/include/scan/: block_scan.cuh  block_scan_warp_scans.cuh  commons.h  thread_reduce.cuh  thread_scan.cuh  warp_scan.cuh  warp_scan_shfl.cuh
backbones/2DMamba/cuda_kernel/include/selective_scan/: global.cuh  selective_scan.cuh  selective_scan_bwd_kernel.cuh  selective_scan_common.cuh  selective_scan_fwd_kernel.cuh
backbones/2DMamba/cuda_kernel/include/utils/: cuda_utils.h
backbones/2DMamba/cuda_kernel/src/: pscan.cu  test_arr.cu  test_non_arr.cu
backbones/2DMamba/cuda_kernel/src/repo/: scan.cuh  test_001.cu  test_002_warp.cu  test_003_warp_hw.cu  test_005_block_prefix_callback_op.cu  test_014_block.cu  test_015_block_with_prefix_callback.cu  test_016_block_exclusive_scan.cu  test_017_block_scan_inclusive_array.cu  test_018_blk_scan_arr_prefix_callback.cu  test_019_rev_blk_scan_scalar_prefix_callback.cu  test_020_rev_blk_scan_arr_no_preix_callback.cu  test_021_rev_blk_scan_arr_prefix_callback.cu
backbones/2DMamba/cuda_kernel/src/selective_scan/: selective_scan_bwd.cu  selective_scan_bwd_kernel_fp16.cu  selective_scan_bwd_kernel_fp32.cu  selective_scan_fwd.cu  selective_scan_fwd_kernel_fp16.cu  selective_scan_fwd_kernel_fp32.cu
backbones/2DMamba/v2dmamba_scan/: __init__.py
backbones/ConvNeXt-V2/: SOURCE_URL.txt
backbones/EVSSM/: SOURCE_URL.txt
backbones/MSVMamba/: SOURCE_URL.txt
backbones/MambaIR/: SOURCE_URL.txt
backbones/VMamba/: SOURCE_URL.txt
backbones/Vim/: SOURCE_URL.txt
backbones/iTPN/: SOURCE_URL.txt
backbones/iTPN/det/mmcv_custom/: hivit_layer_decay_optimizer_constructor.py
backbones/iTPN/det/models/: vitdet_modules.py
backbones/pykan/: SOURCE_URL.txt
backbones/timm/: SOURCE_URL.txt
eval_compare/: run_eval.py
eval_compare/LPIPS/: SOURCE_URL.txt
eval_compare/piq/: SOURCE_URL.txt
eval_compare/pyiqa/: SOURCE_URL.txt
eval_compare/pyiqa/tests/: FFHQ_score_topiq_nr-face.csv
iqa_methods/CrossScore/: SOURCE_URL.txt
iqa_methods/LoDa/: SOURCE_URL.txt
iqa_methods/QCN/: SOURCE_URL.txt
iqa_methods/SaTQA/: SOURCE_URL.txt  train.py
iqa_methods/SaTQA/SCL Pre-training/: nt_xent_sup_sparse.py  train_scl.py
iqa_methods/SaTQA/utils/: data_loader.py  folders.py
other_methods/denoising/DualDn/: SOURCE_URL.txt
other_methods/denoising/DualDn/experiments/: README.md
other_methods/denoising/RDDM/: SOURCE_URL.txt
other_methods/denoising/SplitterNet/: SOURCE_URL.txt
other_methods/denoising/TAP/: SOURCE_URL.txt
other_methods/depth_stereo/BiDAStereo/: SOURCE_URL.txt
other_methods/depth_stereo/Depth-Any-Camera/: README.md  SOURCE_URL.txt
other_methods/depth_stereo/DepthPro/: SOURCE_URL.txt
other_methods/depth_stereo/FoundationStereo/: SOURCE_URL.txt
other_methods/depth_stereo/FoundationStereo/core/: submodule.py
other_methods/depth_stereo/Metric3D/: SOURCE_URL.txt
other_methods/depth_stereo/Murre/: SOURCE_URL.txt
other_methods/depth_stereo/Selective-Stereo/: SOURCE_URL.txt
other_methods/depth_stereo/Stereo-Anywhere/: README.md  SOURCE_URL.txt  losses.py  requirements.txt  test.py  test_monotrap.py
other_methods/depth_stereo/Stereo-Anywhere/dataloaders/: __init__.py
other_methods/depth_stereo/TC-Stereo/: SOURCE_URL.txt
other_methods/depth_stereo/Video-Depth-Anything/: SOURCE_URL.txt
other_methods/light_field/BasicLFSR/: SOURCE_URL.txt
other_methods/light_field/NeLF-Pro/: SOURCE_URL.txt
other_methods/light_field/PDistgNet/: SOURCE_URL.txt  test.py  utils.py
other_methods/light_field/PSWPP/: SOURCE_URL.txt
other_methods/super_resolution/InvSR/: SOURCE_URL.txt
other_methods/super_resolution/InvSR/utils/: util_color_fix.py
other_methods/super_resolution/PASD/: SOURCE_URL.txt
other_methods/super_resolution/PFT-SR/: README.md  SOURCE_URL.txt  VisualAttention.py  inference.py  requirements.txt
other_methods/super_resolution/PFT-SR/basicsr/: train.py  version.py
other_methods/super_resolution/PFT-SR/ops_smm/: make.sh  setup.py  test_smm_AmV.py  test_smm_QmK.py
other_methods/super_resolution/PiSA-SR/: SOURCE_URL.txt  pisasr.py  test_pisasr.py
other_methods/super_resolution/StableVSR/: SOURCE_URL.txt
other_methods/weather_removal/DCL/: README.md  SOURCE_URL.txt  calibrate.py  layers.py  make_list.py  options.py  preprocess.py  requirements.txt  test_dense_fog.py  test_gopro_hazy.py  train.py  trainer.py  utils.py
other_methods/weather_removal/DCL/calibrate/: describe.md
other_methods/weather_removal/DCL/datasets/: __init__.py  dense.py  gopro_dataset.py  mono_dataset.py  util.py
other_methods/weather_removal/DCL/networks/: __init__.py  beta_decoder.py  dehaze.py  depth_decoder.py  losses.py  resnet_encoder.py  vgg_model.py
other_methods/weather_removal/DarkIR/: README.md  SOURCE_URL.txt
other_methods/weather_removal/Histoformer/: SOURCE_URL.txt
other_methods/weather_removal/MWFormer/: README.md  SOURCE_URL.txt  main_finetune.py  main_train.py  main_train_style.py  test.py  train_data_functions.py  utils_network.py
other_methods/weather_removal/MWFormer/configs/: train_finetune_config.py  (+2 more)
other_methods/weather_removal/MetaWeather/: SOURCE_URL.txt
tools/data/albumentations/: SOURCE_URL.txt
tools/local_utils/: data_utils.py  eval_protocol.py  mos_utils.py  plotting_utils.py  rank_losses.py
tools/train/tensorboardX/: SOURCE_URL.txt
tools/vis/torch-cam/: SOURCE_URL.txt
(+50 files in other folders)
